# FuzzyMac

./: .gitignore  :w  CMakeLists.txt  README.md  assets.qrc  compile.sh  log  makefile  open  release.sh
Cask/: fuzzymac.rb
Casks/: fuzzymac.rb
Formula/: fuzzymac.rb
FuzzyMac.app/Contents/: Info.plist
cli/: FuzzyMacCLI
include/App/: Algorithms.hpp  App.hpp  AppCli.hpp  Event.hpp  GlobalKeys.hpp  MacNativeHandler.hpp  MainFrame.hpp  ResultEntry.hpp  SearchFrame.hpp  SearchResultPanel.hpp  State.hpp
include/FuzzyMac/: Algorithms.hpp  Animations.hpp  Api.hpp  AppModeHandler.hpp  CLIModeHandler.hpp  ClipInfoPanel.hpp  ClipModeHandler.hpp  ConfigManager.hpp  DefaultConfig.hpp  FileInfoPanel.hpp  FileModeHandler.hpp  FileWatcher.hpp  FuzzyWidget.hpp  GlobalShortcut.hpp  ImageViewerInfoPanel.hpp  InfoPanel.hpp  KeyMap.hpp  MacGlobShortcuts.hpp  MainWindow.hpp  ModHandler.hpp  ModeHandler.hpp  ModeHandlerFactory.hpp  NativeMacHandlers.hpp  ParseConfig.hpp  QueryEdit.hpp  QueryInput.hpp  ResultWidget.hpp  ResultsPanel.hpp  Server.hpp  Utils.hpp  WallpaperMode.hpp
include/shared/: Data.hpp
res/: Info.plist  config.toml  makefile
res/app_icon/: icon.icns
res/icons/: icon.icns  iconcreate.sh
src/: Algorithms.cpp  Animations.cpp  App.cpp  AppCli.cpp  AppModeHandler.cpp  CLIModeHandler.cpp  ClipInfoPanel.cpp  ClipModeHandler.cpp  ConfigManager.cpp  Event.cpp  FileInfoPanel.cpp  FileModeHandler.cpp  FuzzyWidget.cpp  GlobalKey.cpp  GlobalShortcut.cpp  ImageViewerInfoPanel.cpp  InfoPanel.cpp  MacGlobShortcuts.cpp  MacNativeHandlers.mm  MainFrame.cpp  MainWindow.cpp  ModHanlder.cpp  ModeHandler.cpp  ModeHandlerFactory.cpp  NativeMacHandlers.mm  ParseConfig.cpp  QueryEdit.cpp  QueryInput.cpp  ResulsPanel.cpp  ResultEntry.cpp  ResultWidget.cpp  ResultsPanel.cpp  SearchFrame.cpp  SearchResultPanel.cpp  Server.cpp  State.cpp  Utils.cpp  WallpaperMode.cpp  main.cpp
src/cli/: main.cpp
